feat: add person

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Vite App</title>
   </head>
   <body>
+    <section class="person-section">
+      <div class="person">
+        <div class="person__head">
+          <div class="person__face"></div>
+        </div>
+      </div>
+    </section>
     <section class="the-last-of-us-characters">
       <div class="joel">
         <div class="joel-body"></div>
