--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <title>Vite App</title>
   </head>
   <body>
-    <section class="person-section">
-      <div class="person">
-        <div class="person__head">
-          <div class="person__face"></div>
+    <section class="person2-section">
+      <div class="person2">
+        <div class="person2__head">
+          <div class="person2__beard"></div>
+          <div class="person2__face"></div>
+        </div>
+      </div>
+      
+    </section>
+
+    <section class="person1-section">
+      <div class="person1">
+        <div class="person1__head">
+          <div class="person1__face"></div>
         </div>
       </div>
     </section>
+
     <section class="the-last-of-us-characters">
       <div class="joel">
         <div class="joel-body"></div>
@@ -29,6 +40,7 @@
         </div>
       </div>
     </section>
-    <script type="module" src="./js/main.js"></script>
+
+    <script type="module" src="./js/main.js"></script> 
   </body>
 </html>
